# ChangeLog for sys-boot/syslinux
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.77 2010/12/09 09:56:19 phajdan.jr Exp $

  09 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> syslinux-4.03.ebuild:
  x86 stable wrt bug #347061

  29 Nov 2010; Markos Chandras <hwoarang@gentoo.org> syslinux-4.03.ebuild:
  Stable on amd64 wrt bug #347061

*syslinux-4.03 (25 Oct 2010)

  25 Oct 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-4.03.ebuild:
  Version bump, bug #342503.

  18 Oct 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -files/syslinux-3.31-nossp.patch, -files/syslinux-3.72-nopie.patch,
  -files/syslinux-3.72-nostrip.patch, -syslinux-3.83.ebuild,
  -syslinux-4.00.ebuild, -syslinux-4.01.ebuild:
  Remove old.

  05 Oct 2010; Markus Meier <maekke@gentoo.org> syslinux-4.02.ebuild:
  x86 stable, bug #337013

  23 Sep 2010; Markos Chandras <hwoarang@gentoo.org> syslinux-4.02.ebuild:
  Stable on amd64 wrt bug #337013

*syslinux-4.02 (28 Jul 2010)

  28 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-4.02.ebuild:
  Version bump.

*syslinux-4.01 (02 Jul 2010)

  02 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-4.01.ebuild:
  Version bump. Adds support for Lua scripting.

*syslinux-4.00 (29 Jun 2010)

  29 Jun 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -syslinux-4.00_pre55.ebuild, +syslinux-4.00.ebuild:
  Version bump. Adds support for booting from ext4 and btrfs, as well as
  booting from GPT >2TB.

*syslinux-4.00_pre55 (22 Jun 2010)

  22 Jun 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -syslinux-1.76.ebuild, -syslinux-3.11.ebuild,
  -files/syslinux-3.11-nopie.patch, -files/syslinux-3.11-nossp.patch,
  -syslinux-3.20.ebuild, -syslinux-3.31.ebuild, -syslinux-3.52.ebuild,