@@ -2,11 +2,11 @@ AUX syslinux-3.86-nopie.patch 551 RMD160 9facd00e8b1fb60affa4efd6622d6cecaaf3b61
 AUX syslinux-4.00-nopie.patch 527 RMD160 485901ad3c55f50c3e3795efd5d2c5b18a406a5a SHA1 44152e5e2afd2d032e148349898ee78d3d9b1eb1 SHA256 d0d4834043d52f73969ca60eb37729ee44d866ecddf13bceacd7c71147698323
 DIST syslinux-2.13.tar.bz2 421753 RMD160 fa11d68d2758b34b38d670f4866fb39eb4e246c4 SHA1 3c0bf23f35d91c5db7ad8976645ae86ab7320a85 SHA256 44aab24c05570e34a25e5192206098c3f220d7669be9cd9de9117d400a95c65e
 DIST syslinux-3.86.tar.bz2 3735823 RMD160 84a25e275da0d134bce620f1910b04aef9599407 SHA1 2d41043a3083c26e5e6bac3a5e8f17c3c0d963a1 SHA256 82a8d2a242f869cb4c34b3a074871f472762343e1879a4dca23d7ce5c4dcd06d
-DIST syslinux-4.02.tar.bz2 4410935 RMD160 211f4c3cace1b8b7589f580723be608473ed437d SHA1 71edc9e9205258136ebf7af1b17c4af85b33147c SHA256 95cfc459954c3b3660e3c03f8cf9553955affaa1348bd9aa3dca65fb5435337f
 DIST syslinux-4.03.tar.bz2 4381187 RMD160 11dcf7d0bf58dd8cb4fc573212f9206bfb81a472 SHA1 24e260facca404f075485a635f0ddffd6f97fd1a SHA256 c65567e324f9d1f7f794ae8f9578a0292bbd47d7b8d895a004d2f0152d0bda38
+DIST syslinux-4.04.tar.bz2 5340791 RMD160 6460ffcc0f4e291a86a4044b497c01b87bf090b7 SHA1 f3b434b6d0133984e0e523d8404a6463c03e6586 SHA256 e186a21cb1b3b1874f253df21546e8d0595d803bd6a60f38cfafbc10bee90e0b
 EBUILD syslinux-2.13.ebuild 953 RMD160 aacd2969a72d699beb9ccbc7591033193542411b SHA1 645c4f515c9f89bc73b48c071ce4b6d5e140176a SHA256 611542db39b3bebeb05afe699cdd761663cb11461af1041e6c5fd12df39d8a0c
 EBUILD syslinux-3.86.ebuild 1572 RMD160 b45975474c2321d43cba0e57b865f7bdeac72888 SHA1 426fe981858dbc144b08360c19e9f132e18c2b39 SHA256 b3a43fd1be11053fb6e5f90b65abf5c00e83f73aa5963f003c47a7ddbd4d218c
-EBUILD syslinux-4.02.ebuild 1705 RMD160 f07c8c76a1f8f57926a66804f51506b402e33077 SHA1 de34a3c2c8185216e9f1b4dcb641c02203fcdd61 SHA256 dc27b02aecb9cb6971567e267a22d5cda3220e821b652ca3b296570e4f7f2167
 EBUILD syslinux-4.03.ebuild 1709 RMD160 fe4973a7fd1c1ffd696bed9e92a90c1c3692a289 SHA1 8cd8b11ddcbc589b5f381408d78b9359a23d7682 SHA256 fa8db3b31158047b9612b4aa125338670fe3b189d329b40b50f8f4f76dd48f7c
-MISC ChangeLog 13970 RMD160 c15cc2a183e9b215864c6ed1e5bfaa65c08890fa SHA1 69858d6cc53173f19edfc4d9ca96703b833702d1 SHA256 f6cf360cfe726d8d7e8b3265dcee2fd1a36a517bf3ff7744d0228c634fd5eb6b
+EBUILD syslinux-4.04.ebuild 1709 RMD160 83b0a0a8f8e107d070c09bca69487b44c22939b9 SHA1 6bde88c7f8e259f2a9dbf4b1962b6045c96ac2d5 SHA256 0d5d26d670124aa01af01ca918ddaa63791b3420ed9d133aca7022d8ee32d960
+MISC ChangeLog 14144 RMD160 e4d44227f6a0d79cf6e61d03ebfb41245eae79ea SHA1 7636475e343b8665b7befe010d46d0246da3e637 SHA256 68e5d162d47d70c54344519630765d17aaa40796b89fe59208db50f5c3833536
 MISC metadata.xml 273 RMD160 1fe6f9528f6f46e20406b962509bf77704a16769 SHA1 820cb70004d78f987a9793acd126c662e28e180a SHA256 ea16e9afcad5ef9e9b29e6959a4632309279e4e0de69c29b40279226c3917b80
