@@ -1,6 +1,12 @@
 # ChangeLog for sys-boot/syslinux
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.77 2010/12/09 09:56:19 phajdan.jr Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.78 2011/04/18 23:59:41 chithanh Exp $
+
+*syslinux-4.04 (18 Apr 2011)
+
+  18 Apr 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  -syslinux-4.02.ebuild, +syslinux-4.04.ebuild:
+  Version bump. Remove old.
 
   09 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> syslinux-4.03.ebuild:
   x86 stable wrt bug #347061
